# cipher

./: README.md
backend/: Dockerfile  README.md  package.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/cipher/aes/: decrypt.py  encrypt.py  key.py
backend/app/cipher/caesar/: key.py
backend/app/cipher/des/: decrypt.py  encrypt.py  key.py
backend/app/cipher/hill/: attack.py  decrypt.py  encrypt.py  key.py
backend/app/cipher/permute/: attack.py  decrypt.py  encrypt.py
backend/app/cipher/playfair/: key.py
backend/app/cipher/rc5/: decrypt.py  encrypt.py  key.py
backend/app/cipher/vigenere/: decrypt.py  encrypt.py  key.py
backend/app/routes/: _helpers.py  aes.py  caesar.py  des.py  hill.py  permute.py  playfair.py  rc5.py  report.py  vigenere.py
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
frontend/app/attack/: page.tsx
frontend/app/decrypt/: page.tsx
frontend/app/encrypt/: page.tsx
frontend/app/og/: page.tsx
frontend/app/report/: page.tsx
frontend/components/: FileSelector.tsx  Footer.tsx  Header.tsx
frontend/components/ui/: click-spark.tsx
